--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ test:
 production:
 adapter: mysql2
   encoding: utf8
-  database: emp_test
+  database: emp_development
   username: root
   password: root
   host: 127.0.0.1
