--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,11 @@ test:
   host: 127.0.0.1
   port: 3306
 production:
-adapter: mysql2
-  encoding: utf8
-  database: emp_development
-  username: root
-  password: root
-  host: 127.0.0.1
-  port: 3306
+database: emp_prod
+adapter: postgrel
+  encoding: unicode
+  username: postgres
+  password: postgres
+  host: localhost
+  port: 5432
+pool: 100
